<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lp.binder.AuthentificationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:id="@+id/relativeLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contenerEditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contenerEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contenerEditTextLogin"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/contenerButtonEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contenerEditTextPassword"
            android:layout_marginBottom="25dp">


            <Button
                android:id="@+id/btSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/text_button_signup"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/text_button_signin"
                android:textColor="@android:color/white" />


        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/contenerButtonEmailSignIn"
            android:layout_marginBottom="25dp"
            android:text="@string/text_view_other_signin"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButtonGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginBottom="25dp" />

    </RelativeLayout>


</RelativeLayout>
